--- a/ansible/container_lab_switch_generation/main.yml
+++ b/ansible/container_lab_switch_generation/main.yml
@@ -29,11 +29,11 @@
     set_fact:
       containerlab_config_parsed: "{{ containerlab_config['content'] | b64decode | from_yaml }}"
 
-  - name: Add new Arista container switches to existing configuration
+ - name: Add new Arista container switches to existing configuration
     set_fact:
       updated_containerlab_config: "{{ containerlab_config_parsed | combine({'topology': {'nodes': new_switches}}, recursive=True) }}"
     vars:
-      new_switches: "{{ containerlab_config_parsed.topology.nodes | default({}) | combine(new_arista_switches | items2dict(key_name='name', value_name=None)) }}"
+      new_switches: "{{ containerlab_config_parsed.topology.nodes | default({}) | combine(dict(new_arista_switches | map(attribute='name') | zip(new_arista_switches))) }}"
 
   - name: Write updated containerlab configuration
     copy:
