--- a/ansible/container_lab_switch_generation/main.yml
+++ b/ansible/container_lab_switch_generation/main.yml
@@ -7,17 +7,71 @@
     set_fact:
       new_arista_switches:
         - name: Chicago_LEAF1
-          mgmt_ip: 172.100.100.50/24
+          kind: ceos
+          labels:
+            graph-icon: switch
+            graph-level: 2
+          mgmt_ipv4: 172.100.100.121
+          ports:
+          - '22003:22'
+          - 8003:80
+          - 44303:443
+          startup-config: ~/containerlab/topologies/L2LS/configs/LEAF1.cfg
         - name: Chicago_LEAF2
-          mgmt_ip: 172.100.100.51/24
+          kind: ceos
+          labels:
+            graph-icon: switch
+            graph-level: 2
+          mgmt_ipv4: 172.100.100.122
+          ports:
+          - '22003:22'
+          - 8003:80
+          - 44303:443
+          startup-config: ~/containerlab/topologies/L2LS/configs/LEAF1.cfg
         - name: Chicago_LEAF3
-          mgmt_ip: 172.100.100.52/24
+          kind: ceos
+          labels:
+            graph-icon: switch
+            graph-level: 2
+          mgmt_ipv4: 172.100.100.123
+          ports:
+          - '22003:22'
+          - 8003:80
+          - 44303:443
+          startup-config: ~/containerlab/topologies/L2LS/configs/LEAF1.cfg
         - name: Chicago_LEAF4
-          mgmt_ip: 172.100.100.53/24
+          kind: ceos
+          labels:
+            graph-icon: switch
+            graph-level: 2
+          mgmt_ipv4: 172.100.100.124
+          ports:
+          - '22003:22'
+          - 8003:80
+          - 44303:443
+          startup-config: ~/containerlab/topologies/L2LS/configs/LEAF1.cfg
         - name: Chicago_SPINE1
-          mgmt_ip: 172.100.100.54/24
+          kind: ceos
+          labels:
+            graph-icon: switch
+            graph-level: 2
+          mgmt_ipv4: 172.100.100.125
+          ports:
+          - '22003:22'
+          - 8003:80
+          - 44303:443
+          startup-config: ~/containerlab/topologies/L2LS/configs/LEAF1.cfg
         - name: Chicago_SPINE2
-          mgmt_ip: 172.100.100.55/24
+          kind: ceos
+          labels:
+            graph-icon: switch
+            graph-level: 2
+          mgmt_ipv4: 172.100.100.126
+          ports:
+          - '22003:22'
+          - 8003:80
+          - 44303:443
+          startup-config: ~/containerlab/topologies/L2LS/configs/LEAF1.cfg
         # Add more new Arista switches if needed
 
   - name: Read existing containerlab configuration
@@ -42,4 +96,4 @@
 
   - name: Apply updated containerlab configuration
     command:
-      cmd: containerlab deploy -t updated_containerlab.yml -l
+      cmd: sudo containerlab deploy -t updated_containerlab.yml
