--- a/ansible/creationPlays/VLAN_Creation.yml
+++ b/ansible/creationPlays/VLAN_Creation.yml
@@ -4,18 +4,10 @@
   gather_facts: no  #Tells Ansible not to gather facts about the device before running the play
   connection: network_cli   #Tells Ansible to use the CLI of Arista EOS
   tasks:
-    - name: Create VLANs
+    - name: Create VLANs on Arista switch
       eos_vlans:
-        vlan_id: "{{ item.id }}"    #Pulls the ID of the VLAN from the below with_items section
-        name: "{{ item.name }}" #Pulls the name of the interface from the below with_items section
-        state: present  #This will make the VLAN if it is not created already
-      with_items:
-        - { id: 60, name: "VLAN60" }    #Define the VLAN ID and name. EX: - { id: 10, name: "VLAN10" }
-
-    #- name: Add VLANs to trunk ports
-    #  eos_interface:
-    #    name: "{{ item.name }}" #Pulls the name of the interface from the below with_items section
-    #    vlan_mode: Access    #Set the mode of the VLAN. EX: Trunk, Access, Local
-    #    trunk_allowed_vlans: "{{ item.allowed_vlans }}" #Pulls the allowed VLANs from below with_items section
-    #  with_items:
-    #    - { name: "Ethernet1", allowed_vlans: "50,60" } #Define the interface and allowed VLANs. EX: - { name: "Ethernet1", allowed_vlans: "10,20" }
+        config:
+          - name: TestVLAN   #Give your VLAN a fun name here
+            state: active    #Set the VLAN state to active or suspened
+            vlan_id: 20      #Set the VLAN ID
+        state: merged        #Set the state of the VLAN to merged (Default), replaced, overridden, deleted, rendered, gathered, parsed
