--- a/AnsibleCore/ansible.cfg
+++ b/AnsibleCore/ansible.cfg
@@ -1,3 +1,3 @@
 [defaults]
-inventory = ./inventory.ini
+inventory = ./GQL_Inv/inventory.ini
 collections_paths = /root/.ansible/collections/ansible_collections
