--- a/ansible/Config_Generation/AutoGenerate.yml
+++ b/ansible/Config_Generation/AutoGenerate.yml
@@ -1,6 +1,6 @@
 ---
 - name: autogenerate configs
-  hosts: all
+  hosts: localhost
   become: yes
   become_method: enable
   connection: network_cli
