--- a/ansible/Config_Generation/Config_Role/tasks/main.yml
+++ b/ansible/Config_Generation/Config_Role/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Render Template
+- name: Render template
   template:
     src: templates/{{ template }}
     dest: ../../renderedconfigs/menomonie-dc1/{{ hostname }}.cfg
