--- a/ansible/OSPF/OSPF_Process_Conf.yml
+++ b/ansible/OSPF/OSPF_Process_Conf.yml
@@ -11,9 +11,9 @@
           processes:
             - areas:
               - area_id: "1.1.1.1"    #Replace with your desired area id, keep the quotations
-                authentication:           #This ecryptoin section was taken from the module documentation for a proof of concept
-                  spi: 43             #Specify your Security Paramater Index value
+                authentication:           #This ecryption section was taken from the module documentation for a proof of concept
+                  spi: 43             #Specify your Security Parameter Index value
                   algorithm: "md5"    #Choose the algorithm type that you want
                   encrypt_key: False  #When this option is false the below passphrase is encrypted and not displayed like below
                   passphrase: "7hl8FV3lZ6H1mAKpjL47hQ=="  #Passphrase for the authentication process
-              vrf: "TestProcess"      #This is the you want to give your OSPF process
+              vrf: "TestProcess"      #This is the name want to give your OSPF process
